# canon

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  dist-workspace.toml  release-plz.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/canon-core/: CHANGELOG.md  Cargo.toml
crates/canon-core/src/: lib.rs
crates/canon-core/src/audit/: drift.rs  folder.rs  frontmatter.rs  invariants.rs  mod.rs
crates/canon-core/src/cli/: align.rs  align_apply.rs  audit.rs  mod.rs  template.rs
crates/canon-core/src/gap_report/: formatter.rs  mod.rs
crates/canon-core/src/orchestrator/: anchor_runner.rs  mod.rs
crates/canon-core/src/plan/: emitter.rs  judgment_iface.rs  mod.rs  types.rs
crates/canon-core/src/stub/: mod.rs
crates/canon-core/src/template/: loader.rs  manifest.rs  mod.rs  validate.rs
crates/canon-core/templates/canon-default/: frontmatter.schema.json  manifest.toml
docs/: built-in-templates.md  template-format.md
src/: main.rs
tests/: align_apply_pipeline.rs  align_roundtrip.rs  audit_baselines.rs  built_in_templates.rs  template_loader.rs  template_namespace.rs
tests/fixtures/align/frontmatter-drift/01-identity/: _INDEX.md
tests/fixtures/align/numbered-clean/01-identity/: _INDEX.md
tests/fixtures/align/numbered-clean/32-analysis/: _INDEX.md
tests/fixtures/align/unnumbered-drift/analysis/: deep-dive.md
tests/fixtures/align/unnumbered-drift/identity/: overview.md
tests/fixtures/audit/clean-corpus/01-identity/: 01-definition.md  _INDEX.md
tests/fixtures/audit/content-split/01-identity/: multi-concept.md
tests/fixtures/audit/folder-shape-drift/concepts/: concept.md
tests/fixtures/audit/frontmatter-required-missing/01-identity/: no-frontmatter.md
tests/fixtures/audit/frontmatter-type-wrong/01-identity/: wrong-type.md
tests/fixtures/audit/frontmatter-value-invalid/01-identity/: invalid-value.md
tests/fixtures/audit/gateway-drift/providers/: placeholder.md
tests/fixtures/audit/graduation-candidate/01-identity/: _INDEX.md  large-file.md
tests/fixtures/audit/invariant-violation/: 41-gaps
tests/fixtures/audit/missing-index/01-identity/: 01-definition.md
tests/fixtures/audit/unknown-field/01-identity/: unknown-fm.md
tests/fixtures/templates/test-builtin/: manifest.toml
tests/fixtures/templates/test-standard/: frontmatter.schema.json  manifest.toml
tests/fixtures/templates/test-user/: manifest.toml
tests/fixtures/templates/test-with-rules/: folder-rules.toml  frontmatter.schema.json  manifest.toml
tests/fixtures/templates/test-workspace/: manifest.toml
