[workspace]
members = [".", "crates/canon-core"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["AccelMars"]
repository = "https://github.com/accelmars/canon"

[workspace.dependencies]
canon-core = { path = "crates/canon-core" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
toml = "0.8"
walkdir = { version = "2" }

[package]
name = "canon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Canon canonicalization CLI"

[dependencies]
canon-core = { workspace = true }

[dev-dependencies]
canon-core = { workspace = true }
serde_json = { workspace = true }
