[workspace]
members = [".", "crates/canon-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["AccelMars Co., Ltd."]
repository = "https://github.com/accelmars/canon"

[workspace.dependencies]
# Alias keeps Rust code using canon_core:: unchanged; package name is accelmars-canon-core
canon-core = { package = "accelmars-canon-core", path = "crates/canon-core" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
toml = "0.8"
walkdir = { version = "2" }
tempfile = { version = "3" }

[package]
name = "accelmars-canon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Canon canonicalization CLI"

[[bin]]
name = "canon"
path = "src/main.rs"

[dependencies]
canon-core = { workspace = true }

[dev-dependencies]
canon-core = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dist]
inherits = "release"
lto = "thin"
